--- a/src/Assests/css/main.css
+++ b/src/Assests/css/main.css
@@ -1666,7 +1666,19 @@ h2.title {
   margin: 15px -70px 10px 25px;
 }
 
-.cart_quantity_button a {
+/* .cart_quantity_button a {
+  background:#F0F0E9;
+  color: #696763;
+  display: inline-block;
+  font-size: 16px;
+  height: 28px;
+  overflow: hidden;
+  text-align: center;
+  width: 35px;
+  float: left;
+} */
+
+.cart_quantity_button button {
   background:#F0F0E9;
   color: #696763;
   display: inline-block;
